Fix duplicated module headers (#7650)
* Fix duplicated module headers

Closes https://github.com/elastic/beats/issues/7643

* fix metricset titles for munin and kvm

* fix imssing kubernetes apiserver metricset doc

* remove headers from modules / metricset generator and clean up traefik title

--- a/metricbeat/docs/modules/kubernetes.asciidoc
+++ b/metricbeat/docs/modules/kubernetes.asciidoc
@@ -68,6 +68,8 @@ This module supports TLS connection when using `ssl` config field, as described 
 
 The following metricsets are available:
 
+* <<metricbeat-metricset-kubernetes-apiserver,apiserver>>
+
 * <<metricbeat-metricset-kubernetes-container,container>>
 
 * <<metricbeat-metricset-kubernetes-event,event>>
@@ -91,6 +93,8 @@ The following metricsets are available:
 * <<metricbeat-metricset-kubernetes-system,system>>
 
 * <<metricbeat-metricset-kubernetes-volume,volume>>
+
+include::kubernetes/apiserver.asciidoc[]
 
 include::kubernetes/container.asciidoc[]
 
