--- a/beatless/docs/index.asciidoc
+++ b/beatless/docs/index.asciidoc
@@ -1,4 +1,4 @@
-= Beatless Reference
+= Beatname Reference
 
 include::../../libbeat/docs/version.asciidoc[]
 
@@ -13,7 +13,6 @@ include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 :beat_default_index_prefix: {beatname_lc}
 :has_ml_jobs: no
 :libbeat-docs: Beats Platform Reference
-:only-elasticsearch:
 
 include::../../libbeat/docs/shared-beats-attributes.asciidoc[]
 
@@ -33,7 +32,7 @@ include::./configuring-howto.asciidoc[]
 
 include::./fields.asciidoc[]
 
-//include::../../libbeat/docs/monitoring/monitoring-beats.asciidoc[]
+include::../../libbeat/docs/monitoring/monitoring-beats.asciidoc[]
 
 include::../../libbeat/docs/shared-securing-beat.asciidoc[]
 
