--- a/newbeat/docs/getting-started.asciidoc
+++ b/newbeat/docs/getting-started.asciidoc
@@ -4,14 +4,13 @@
 include::../../libbeat/docs/shared-getting-started-intro.asciidoc[]
 
 * <<{beatname_lc}-installation>>
-//* <<{beatname_lc}-configuration>>
-//* <<config-{beatname_lc}-logstash>>
-//* <<{beatname_lc}-template>>
-//* <<load-kibana-dashboards>>
-//* <<{beatname_lc}-starting>>
-//* <<view-kibana-dashboards>>
-//* <<{beatname_lc}-modules-quickstart>>
-//* <<setup-repositories>>
+* <<{beatname_lc}-configuration>>
+* <<config-{beatname_lc}-logstash>>
+* <<{beatname_lc}-template>>
+* <<load-kibana-dashboards>>
+* <<{beatname_lc}-starting>>
+* <<view-kibana-dashboards>>
+* <<setup-repositories>>
 
 [id="{beatname_lc}-installation"]
 === Step 1: Install {beatname_uc}
@@ -22,91 +21,108 @@ include::../../libbeat/docs/shared-download-and-install.asciidoc[]
 *deb:*
 
 ifeval::["{release-state}"=="unreleased"]
+
 Version {version} of {beatname_uc} has not yet been released.
+
 endif::[]
 
 ifeval::["{release-state}"!="unreleased"]
+
 ["source","sh",subs="attributes"]
 ------------------------------------------------
 curl -L -O https://artifacts.elastic.co/downloads/beats/{beatname_lc}/{beatname_lc}-{version}-amd64.deb
 sudo dpkg -i {beatname_lc}-{version}-amd64.deb
 ------------------------------------------------
+
 endif::[]
 
 [[rpm]]
 *rpm:*
 
 ifeval::["{release-state}"=="unreleased"]
+
 Version {version} of {beatname_uc} has not yet been released.
+
 endif::[]
 
 ifeval::["{release-state}"!="unreleased"]
-["source","sh",subs="attributes,callouts"]
+
+["source","sh",subs="attributes"]
 ------------------------------------------------
 curl -L -O https://artifacts.elastic.co/downloads/beats/{beatname_lc}/{beatname_lc}-{version}-x86_64.rpm
 sudo rpm -vi {beatname_lc}-{version}-x86_64.rpm
 ------------------------------------------------
+
 endif::[]
 
 [[mac]]
 *mac:*
 
 ifeval::["{release-state}"=="unreleased"]
+
 Version {version} of {beatname_uc} has not yet been released.
+
 endif::[]
 
 ifeval::["{release-state}"!="unreleased"]
+
 ["source","sh",subs="attributes"]
 ------------------------------------------------
 curl -L -O https://artifacts.elastic.co/downloads/beats/{beatname_lc}/{beatname_lc}-{version}-darwin-x86_64.tar.gz
 tar xzvf {beatname_lc}-{version}-darwin-x86_64.tar.gz
 ------------------------------------------------
+
 endif::[]
 
 [[docker]]
 *docker:*
 
 ifeval::["{release-state}"=="unreleased"]
+
 Version {stack-version} of {beatname_uc} has not yet been released.
+
 endif::[]
 
 ifeval::["{release-state}"!="unreleased"]
+
 ["source", "shell", subs="attributes"]
 ------------------------------------------------
 docker pull {dockerimage}
 ------------------------------------------------
+
 endif::[]
 
 [[win]]
 *win:*
 
 ifeval::["{release-state}"=="unreleased"]
+
 Version {version} of {beatname_uc} has not yet been released.
+
 endif::[]
 
 ifeval::["{release-state}"!="unreleased"]
+
 . Download the {beatname_uc} Windows zip file from the
 https://www.elastic.co/downloads/beats/{beatname_lc}[downloads page].
 
 . Extract the contents of the zip file into `C:\Program Files`.
 
-. Rename the +{beatname_lc}-<version>-windows+ directory to +{beatname_uc}+.
+. Rename the `{beatname_lc}-<version>-windows` directory to `{beatname_uc}`.
 
-. Open a PowerShell prompt as an Administrator (right-click the PowerShell icon
-  and select *Run As Administrator*).
+. Open a PowerShell prompt as an Administrator (right-click the PowerShell icon and select *Run As Administrator*).
 
-. From the PowerShell prompt, run the following commands to install
-{beatname_uc} as a Windows service:
+. From the PowerShell prompt, run the following commands to install {beatname_uc} as a
+Windows service:
 +
-["source","sh",subs="attributes"]
+[source,shell]
 ----------------------------------------------------------------------
-PS > cd 'C:{backslash}Program Files{backslash}{beatname_uc}'
-PS C:{backslash}Program Files{backslash}{beatname_uc}> .{backslash}install-service-{beatname_lc}.ps1
+PS > cd 'C:\Program Files\{beatname_uc}'
+PS C:\Program Files\{beatname_uc}> .\install-service-{beatname_lc}.ps1
 ----------------------------------------------------------------------
 
-NOTE: If script execution is disabled on your system, you need to set the
-execution policy for the current session to allow the script to run. For
-example: +PowerShell.exe -ExecutionPolicy UnRestricted -File .{backslash}install-service-{beatname_lc}.ps1+.
+NOTE: If script execution is disabled on your system, you need to set the execution policy for the current session to allow the script to run. For example: `PowerShell.exe -ExecutionPolicy UnRestricted -File .\install-service-{beatname_lc}.ps1`.
+
 endif::[]
 
 [id="{beatname_lc}-configuration"]
@@ -114,49 +130,55 @@ endif::[]
 
 include::../../libbeat/docs/shared-configuring.asciidoc[]
 
-Here is a sample of the +{beatname_lc}+ section of the +{beatname_lc}.yml+ file. {beatname_uc} uses predefined
+Here is a sample of the `{beatname_lc}` section of the `{beatname_lc}.yml` file. {beatname_uc} uses predefined
 default values for most configuration options.
 
-["source","sh",subs="attributes"]
+[source,yaml]
 -------------------------------------------------------------------------------------
-{beatname_lc}.inputs
-ADD CONFIG HERE
+{beatname_lc}.inputs:
+- type: log
+  enabled: true
+  paths:
+    - /var/log/*.log
+    #- c:\programdata\elasticsearch\logs\*
 -------------------------------------------------------------------------------------
-
-//Use block delimiters (--) to keep text under list items indented.
 
 To configure {beatname_uc}:
 
-. ADD MAIN STEP FOR CONFIGURING THE INPUT.
+. Define the path (or paths) to your log files.
 +
---
-["source","sh",subs="attributes"]
+For the most basic {beatname_uc} configuration, you can define a single input with a single path. For example:
++
+[source,yaml]
 -------------------------------------------------------------------------------------
 {beatname_lc}.inputs:
-ADD CONFIG HERE
+- type: log
+  enabled: true
+  paths:
+    - /var/log/*.log
 -------------------------------------------------------------------------------------
++
+The input in this example harvests all files in the path `/var/log/*.log`, which means
+that {beatname_uc} will harvest all files in the directory `/var/log/` that end with `.log`. All patterns supported
+by https://golang.org/pkg/path/filepath/#Glob[Go Glob] are also supported here.
++
+To fetch all files from a predefined level of subdirectories, the following pattern can be used:
+`/var/log/*/*.log`. This fetches all `.log` files from the subfolders of `/var/log`. It does not
+fetch log files from the `/var/log` folder itself. Currently it is not possible to recursively
+fetch all files in all subdirectories of a directory.
 
-ADD PARA1
+include::../../libbeat/docs/step-configure-output.asciidoc[]
 
-ADD PARA2
---
+include::../../libbeat/docs/step-configure-kibana-endpoint.asciidoc[]
 
+include::../../libbeat/docs/step-configure-credentials.asciidoc[]
 
-//include::../../libbeat/docs/step-configure-output.asciidoc[]
+include::../../libbeat/docs/step-test-config.asciidoc[]
 
-//include::../../libbeat/docs/step-configure-kibana-endpoint.asciidoc[]
-
-//include::../../libbeat/docs/step-configure-credentials.asciidoc[]
-
-//include::../../libbeat/docs/step-test-config.asciidoc[]
-
-//include::../../libbeat/docs/step-look-at-config.asciidoc[]
-
-
-/////
+include::../../libbeat/docs/step-look-at-config.asciidoc[]
 
 [id="config-{beatname_lc}-logstash"]
-=== Step 3: Configure {beatname_uc} to use {ls}
+=== Step 3: Configure {beatname_uc} to use Logstash
 
 :allplatforms:
 include::../../libbeat/docs/shared-logstash-config.asciidoc[]
@@ -173,7 +195,7 @@ include::../../libbeat/docs/shared-template-load.asciidoc[]
 :allplatforms:
 include::../../libbeat/docs/dashboards.asciidoc[]
 
-[id="{beatname_lc}-starting]]
+[id="{beatname_lc}-starting"]
 === Step 6: Start {beatname_uc}
 
 Start {beatname_uc} by issuing the appropriate command for your platform. If you
@@ -200,37 +222,33 @@ sudo service {beatname_lc} start
 
 *docker:*
 
-["source","sh",subs="attributes"]
+["source", "shell", subs="attributes"]
 ----------------------------------------------------------------------
 docker run {dockerimage}
 ----------------------------------------------------------------------
 
 *mac:*
 
-["source","sh",subs="attributes"]
+[source,shell]
 ----------------------------------------------------------------------
-sudo chown root {beatname_lc}.yml
+sudo chown root {beatname_lc}.yml <1>
 sudo ./{beatname_lc} -e -c {beatname_lc}.yml -d "publish"
 ----------------------------------------------------------------------
-
-// TODO: If this Beat requires root access, uncomment out the following lines and
-// add a callout to the example.
-//<1> You'll be running {beatname_uc} as root, so you need to change ownership
-//of the configuration file, or run {beatname_uc} with `--strict.perms=false`
-//specified. See
-//{libbeat}/config-file-permissions.html[Config File Ownership and Permissions]
-//in the _{libbeat_docs}_.
+<1> You'll be running {beatname_uc} as root, so you need to change ownership
+of the configuration file, or run {beatname_uc} with `--strict.perms=false`
+specified. See
+{libbeat}/config-file-permissions.html[Config File Ownership and Permissions]
+in the _Beats Platform Reference_.
 
 *win:*
 
-["source","sh",subs="attributes"]
+[source,shell]
 ----------------------------------------------------------------------
-PS C:{backslash}Program Files{backslash}{beatname_uc}> Start-Service {beatname_lc}
+PS C:\Program Files\{beatname_uc}> Start-Service {beatname_lc}
 ----------------------------------------------------------------------
 
 
-By default, Windows log files are stored in
-+C:{backslash}ProgramData{backslash}{beatname_lc}{backslash}Logs+.
+By default, Windows log files are stored in `C:\ProgramData\{beatname_lc}\Logs`.
 
 {beatname_uc} is now ready to send log files to your defined output.
 
@@ -247,17 +265,11 @@ You can use these dashboards as examples and
 {kibana-ref}/dashboard.html[customize] them to meet your needs.
 
 To populate the example dashboards with data, you need to either
-<<configuring-ingest-node,define ingest node pipelines>> or use {ls} to
-parse the data into the fields expected by the dashboards. If you are using
-{ls}, see the
-{logstashdoc}/logstash-config-for-{beatname_lc}-modules.html[configuration examples]
-in the {ls} documentation for help parsing the log formats supported
-by the dashboards.
+<<configuring-ingest-node,define ingest node pipelines>> or use Logstash to
+parse the data into the fields expected by the dashboards. 
 
-Here is an example of the {beatname_uc} system dashboard:
+Here is an example of the {beatname_uc} ADD DASHBOARD NAME dashboard:
 
+// Add an example of the dashboard
 //[role="screenshot"]
-//image:./images/add-name-here.png[]
-
-/////
-
+//image:./images/add-image-name.png[]
