--- a/newbeat/docs/setting-up-running.asciidoc
+++ b/newbeat/docs/setting-up-running.asciidoc
@@ -14,11 +14,11 @@ installation instructions to get you started.
 This section includes additional information on how to set up and run
 {beatname_uc}, including:
 
-//* <<directory-layout>>
+* <<directory-layout>>
 
-//* <<keystore>>
+* <<keystore>>
 
-//* <<command-line-options>>
+* <<command-line-options>>
 
 * <<running-on-docker>>
 
@@ -29,14 +29,11 @@ This section includes additional information on how to set up and run
 
 //MAINTAINERS: If you add a new file to this section, make sure you update the bulleted list ^^ too.
 
-//requires configuration-path
-//include::../../libbeat/docs/shared-directory-layout.asciidoc[]
+include::../../libbeat/docs/shared-directory-layout.asciidoc[]
 
-//requires keystore-command
-//include::../../libbeat/docs/keystore.asciidoc[]
+include::../../libbeat/docs/keystore.asciidoc[]
 
-//rquires keystore, directory-layout
-//include::../../libbeat/docs/command-reference.asciidoc[]
+include::../../libbeat/docs/command-reference.asciidoc[]
 
 include::./running-on-docker.asciidoc[]
 
