--- a/newbeat/docs/getting-started.asciidoc
+++ b/newbeat/docs/getting-started.asciidoc
@@ -5,7 +5,6 @@ include::../../libbeat/docs/shared-getting-started-intro.asciidoc[]
 
 * <<{beatname_lc}-installation>>
 * <<{beatname_lc}-configuration>>
-* <<config-{beatname_lc}-logstash>>
 * <<{beatname_lc}-template>>
 * <<load-kibana-dashboards>>
 * <<{beatname_lc}-starting>>
@@ -108,20 +107,20 @@ https://www.elastic.co/downloads/beats/{beatname_lc}[downloads page].
 
 . Extract the contents of the zip file into `C:\Program Files`.
 
-. Rename the `{beatname_lc}-<version>-windows` directory to `{beatname_uc}`.
+. Rename the +{beatname_lc}-<version>-windows+ directory to +{beatname_uc}+.
 
 . Open a PowerShell prompt as an Administrator (right-click the PowerShell icon and select *Run As Administrator*).
 
 . From the PowerShell prompt, run the following commands to install {beatname_uc} as a
 Windows service:
 +
-[source,shell]
+["source","sh",subs="attributes"]
 ----------------------------------------------------------------------
-PS > cd 'C:\Program Files\{beatname_uc}'
-PS C:\Program Files\{beatname_uc}> .\install-service-{beatname_lc}.ps1
+PS > cd 'C:{backslash}Program Files{backslash}{beatname_uc}'
+PS C:{backslash}Program Files{backslash}{beatname_uc}> .{backslash}install-service-{beatname_lc}.ps1
 ----------------------------------------------------------------------
 
-NOTE: If script execution is disabled on your system, you need to set the execution policy for the current session to allow the script to run. For example: `PowerShell.exe -ExecutionPolicy UnRestricted -File .\install-service-{beatname_lc}.ps1`.
+NOTE: If script execution is disabled on your system, you need to set the execution policy for the current session to allow the script to run. For example: +PowerShell.exe -ExecutionPolicy UnRestricted -File .\install-service-{beatname_lc}.ps1+.
 
 endif::[]
 
@@ -130,42 +129,26 @@ endif::[]
 
 include::../../libbeat/docs/shared-configuring.asciidoc[]
 
-Here is a sample of the `{beatname_lc}` section of the `{beatname_lc}.yml` file. {beatname_uc} uses predefined
-default values for most configuration options.
+Here is a sample of the +{beatname_lc}+ section of the +{beatname_lc}.yml+ file.
+{beatname_uc} uses predefined default values for most configuration options.
 
-[source,yaml]
+["source","sh",subs="attributes"]
 -------------------------------------------------------------------------------------
 {beatname_lc}.inputs:
-- type: log
-  enabled: true
-  paths:
-    - /var/log/*.log
-    #- c:\programdata\elasticsearch\logs\*
+ADD EXAMPLE HERE
 -------------------------------------------------------------------------------------
 
 To configure {beatname_uc}:
 
-. Define the path (or paths) to your log files.
+. ADD CONFIG STEP HERE
 +
-For the most basic {beatname_uc} configuration, you can define a single input with a single path. For example:
+ADD TEXT IF YOU NEED TO SAY MORE
 +
-[source,yaml]
+["source","sh",subs="attributes"]
 -------------------------------------------------------------------------------------
 {beatname_lc}.inputs:
-- type: log
-  enabled: true
-  paths:
-    - /var/log/*.log
+ADD AN EXAMPLE IF NEEDED
 -------------------------------------------------------------------------------------
-+
-The input in this example harvests all files in the path `/var/log/*.log`, which means
-that {beatname_uc} will harvest all files in the directory `/var/log/` that end with `.log`. All patterns supported
-by https://golang.org/pkg/path/filepath/#Glob[Go Glob] are also supported here.
-+
-To fetch all files from a predefined level of subdirectories, the following pattern can be used:
-`/var/log/*/*.log`. This fetches all `.log` files from the subfolders of `/var/log`. It does not
-fetch log files from the `/var/log` folder itself. Currently it is not possible to recursively
-fetch all files in all subdirectories of a directory.
 
 include::../../libbeat/docs/step-configure-output.asciidoc[]
 
@@ -177,26 +160,20 @@ include::../../libbeat/docs/step-test-config.asciidoc[]
 
 include::../../libbeat/docs/step-look-at-config.asciidoc[]
 
-[id="config-{beatname_lc}-logstash"]
-=== Step 3: Configure {beatname_uc} to use Logstash
-
-:allplatforms:
-include::../../libbeat/docs/shared-logstash-config.asciidoc[]
-
 [id="{beatname_lc}-template"]
-=== Step 4: Load the index template in Elasticsearch
+=== Step 3: Load the index template in Elasticsearch
 
 :allplatforms:
 include::../../libbeat/docs/shared-template-load.asciidoc[]
 
 [[load-kibana-dashboards]]
-=== Step 5: Set up the Kibana dashboards
+=== Step 4: Set up the Kibana dashboards
 
 :allplatforms:
 include::../../libbeat/docs/dashboards.asciidoc[]
 
 [id="{beatname_lc}-starting"]
-=== Step 6: Start {beatname_uc}
+=== Step 5: Start {beatname_uc}
 
 Start {beatname_uc} by issuing the appropriate command for your platform. If you
 are accessing a secured Elasticsearch cluster, make sure you've configured
@@ -229,7 +206,7 @@ docker run {dockerimage}
 
 *mac:*
 
-[source,shell]
+["source","sh",subs="attributes"]
 ----------------------------------------------------------------------
 sudo chown root {beatname_lc}.yml <1>
 sudo ./{beatname_lc} -e -c {beatname_lc}.yml -d "publish"
@@ -242,18 +219,18 @@ in the _Beats Platform Reference_.
 
 *win:*
 
-[source,shell]
+["source","sh",subs="attributes"]
 ----------------------------------------------------------------------
-PS C:\Program Files\{beatname_uc}> Start-Service {beatname_lc}
+PS C:{backslash}Program Files{backslash}{beatname_uc}> Start-Service {beatname_lc}
 ----------------------------------------------------------------------
 
 
-By default, Windows log files are stored in `C:\ProgramData\{beatname_lc}\Logs`.
+By default, Windows log files are stored in +C:\ProgramData\{beatname_lc}\Logs+.
 
 {beatname_uc} is now ready to send log files to your defined output.
 
 [[view-kibana-dashboards]]
-=== Step 7: View the sample Kibana dashboards
+=== Step 6: View the sample Kibana dashboards
 
 To make it easier for you to explore {beatname_uc} data in Kibana, we've created
 example {beatname_uc} dashboards. You loaded the dashboards earlier when you
