--- a/newbeat/docs/overview.asciidoc
+++ b/newbeat/docs/overview.asciidoc
@@ -5,8 +5,8 @@
 <titleabbrev>Overview</titleabbrev>
 ++++
 
-{beatname_uc} is...
+{beatname_uc} is... DESCRIBE NEWBEAT HERE
 
-{beatname_uc} is a https://www.elastic.co/products/beats[Beat], and it is based
-on the libbeat framework. For more information about libbeat, see the
-{libbeat}/index.html[{libbeat-docs}].
+{beatname_uc} is an Elastic https://www.elastic.co/products/beats[Beat]. It's
+based on the `libbeat` framework. For more information, see the
+{libbeat}/index.html[{libbeat-docs}]. 
