--- a/beatless/docs/getting-started.asciidoc
+++ b/beatless/docs/getting-started.asciidoc
@@ -17,10 +17,12 @@ include::../../libbeat/docs/shared-getting-started-intro.asciidoc[]
 The {beatname_uc} package contains the command line tools, configuration file,
 and binary code required to run Beatless in your serverless environment. 
 
-To download and install the package, use the commands that work with your system
+To download and extract the package, use the commands that work with your system
 (<<deb, deb>> for Debian/Ubuntu, <<rpm, rpm>> for Redhat/Centos/Fedora, <<mac,
-mac>> for OS X, <<docker, docker>> for any Docker platform, and <<win, win>> for
-Windows).
+mac>> for OS X, and <<win, win>> for Windows).
+
+TODO: Remove sections that aren't relevant here and fix the paths to reflect the
+actual package names and download URLs.
 
 [[deb]]
 *deb:*
@@ -79,24 +81,6 @@ tar xzvf {beatname_lc}-{version}-darwin-x86_64.tar.gz
 
 endif::[]
 
-[[docker]]
-*docker:*
-
-ifeval::["{release-state}"=="unreleased"]
-
-Version {stack-version} of {beatname_uc} has not yet been released.
-
-endif::[]
-
-ifeval::["{release-state}"!="unreleased"]
-
-["source", "shell", subs="attributes"]
-------------------------------------------------
-docker pull {dockerimage}
-------------------------------------------------
-
-endif::[]
-
 [[win]]
 *win:*
 
@@ -118,11 +102,18 @@ endif::[]
 [id="{beatname_lc}-configuration"]
 === Step 2: Configure {beatname_uc}
 
-Before pushing {beatname_uc} to your serverless environment, you specify
-settings in the configuration file to define the function name, type, and
-triggers that will be used to invoke the function. You also configure any
-additional processing (such as processors) that you want to apply, and you
-specify connection details for your {es} cluster.
+To run {beatname_uc} in your serverless environment, you need to define the
+functions that will execute when specific triggers are invoked.
+
+Before pushing {beatname_uc} code to your serverless environment, you need to
+define details the functions that you want to deploy, including the
+function name, type and triggers that will invoke the function. To do this, you
+specify settings in the +{beatname_lc}.yml+ configuration file. You 
+You also configure additional settings, such as processors to filter the data,
+and you specify connection details for your {es} cluster.
+
+The configuration file, +{beatname_lc}.yml+, is in the archive that you
+extracted earlier.
 
 TIP: See the
 {libbeat}/config-file-format.html[Config File Format] section of the
@@ -131,21 +122,49 @@ _Beats Platform Reference_ for more about the structure of the config file.
 The following example configures a function called `myfunction` that collects
 events from Cloudwatch Logs and forwards the events to {es}.
 
+QUESTION: For the initial release, will users need to explicitly disable any
+options that write to disk (example below was taken from a demo, so not sure)?
+
+TODO: Pare down this example.
+
 ["source","sh",subs="attributes"]
 -------------------------------------------------------------------------------------
-{beatname_lc}.inputs:
-ADD EXAMPLE HERE
+{beatname_lc}.provider.aws:
+  functions:
+    - name: ph
+      type: cloudwatch_logs
+      triggers:
+        - log_group_name: /aws/lambda/TestingCloudwatchlogs
+          filter_name: myfilter
+cloud.id: ${cloud_id}
+cloud.auth: ${cloud_auth}
+
+output.elasticsearch:
+  enabled: true
+  hosts:
+
+# Disable anything that could be send to disk
+path.data: /tmp
+path.logs: /tmp/logs
+logging.to_stderr: true
+logging.to_files: false
+logging.level: debug
+setup.template.enabled: true
+queue.mem:
+  events: 50
+  flush.min_events: 1
+  flush.timeout: 0.5s
 -------------------------------------------------------------------------------------
 
 To configure {beatname_uc}:
 
-. ADD CONFIG STEP HERE
+. Define the functions that will execute in your serverless environment.
 +
-ADD TEXT IF YOU NEED TO SAY MORE
+TODO: Explain what is required (name, type?, one or more triggers, etc. Will
+need to desribe triggers somewhere else maybe and refer to those?
 +
 ["source","sh",subs="attributes"]
 -------------------------------------------------------------------------------------
-{beatname_lc}.inputs:
 ADD AN EXAMPLE IF NEEDED
 -------------------------------------------------------------------------------------
 
@@ -172,49 +191,38 @@ include::../../libbeat/docs/shared-template-load.asciidoc[]
 include::../../libbeat/docs/dashboards.asciidoc[]
 
 [id="{beatname_lc}-starting"]
-=== Step 5: Start {beatname_uc}
+=== Step 5: Deploy functions to your serverless environment
 
-Start {beatname_uc} by issuing the appropriate command for your platform. If you
-are accessing a secured Elasticsearch cluster, make sure you've configured
-credentials as described in <<{beatname_lc}-configuration>>.
+Before deploying functions to your serverless environment, make sure you're
+logged in with the credentials required by your cloud service provider and that
+the logged in user has the privileges (?) required to ???? (deploy and run
+functions?)
 
-NOTE: If you use an init.d script to start {beatname_uc} on deb or rpm, you can't
-specify command line flags (see <<command-line-options>>). To specify flags,
-start {beatname_uc} in the foreground.
+The following command deploys the function named `myfunction`. See xxx for more
+information about the `deploy` command.
+
+//QUESTION: Which flags do we want to show in the example here? debug selectors?
 
 *deb:*
 
 ["source","sh",subs="attributes"]
 ----------------------------------------------------------------------
-sudo service {beatname_lc} start
+{beatname_lc} function deploy myfunction
 ----------------------------------------------------------------------
 
 *rpm:*
 
 ["source","sh",subs="attributes"]
 ----------------------------------------------------------------------
-sudo service {beatname_lc} start
-----------------------------------------------------------------------
-
-*docker:*
-
-["source", "shell", subs="attributes"]
-----------------------------------------------------------------------
-docker run {dockerimage}
+{beatname_lc} function deploy myfunction
 ----------------------------------------------------------------------
 
 *mac:*
 
 ["source","sh",subs="attributes"]
 ----------------------------------------------------------------------
-sudo chown root {beatname_lc}.yml <1>
-sudo ./{beatname_lc} -e -c {beatname_lc}.yml -d "publish"
+./{beatname_lc} function deploy myfunction
 ----------------------------------------------------------------------
-<1> You'll be running {beatname_uc} as root, so you need to change ownership
-of the configuration file, or run {beatname_uc} with `--strict.perms=false`
-specified. See
-{libbeat}/config-file-permissions.html[Config File Ownership and Permissions]
-in the _Beats Platform Reference_.
 
 *win:*
 
