--- a/beatless/docs/index.asciidoc
+++ b/beatless/docs/index.asciidoc
@@ -1,4 +1,4 @@
-= Beatname Reference
+= Beatless Reference
 
 include::../../libbeat/docs/version.asciidoc[]
 
@@ -13,6 +13,7 @@ include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 :beat_default_index_prefix: {beatname_lc}
 :has_ml_jobs: no
 :libbeat-docs: Beats Platform Reference
+:only-elasticsearch:
 
 include::../../libbeat/docs/shared-beats-attributes.asciidoc[]
 
