--- a/libbeat/docs/step-configure-output.asciidoc
+++ b/libbeat/docs/step-configure-output.asciidoc
@@ -8,13 +8,13 @@ To send output directly to {es} (without using {ls}), set the location of the
 {es} installation:
 +
 --
-endif::[]
+endif::only-elasticsearch[]
 ifdef::only-elasticsearch[]
 . Configure the  {es} output by setting the location of the {es} installation:
 +
 --
-endif::[]
-endif::[]
+endif::only-elasticsearch[]
+endif::has_module_steps[]
 * If you're running our
 https://www.elastic.co/cloud/elasticsearch-service[hosted {es} Service]
 on Elastic Cloud, specify your <<configure-cloud-id,Cloud ID>>. For example:
@@ -34,6 +34,7 @@ output.elasticsearch:
 ----------------------------------------------------------------------
 ifndef::has_module_steps[]
 --
++
 ifndef::only-elasticsearch[]
 ifeval::["{beatname_lc}"!="filebeat" and "{beatname_lc}"!="winlogbeat"]
 To send output to {ls}, 
@@ -44,8 +45,8 @@ ifeval::[("{beatname_lc}"=="filebeat") or ("{beatname_lc}"=="winlogbeat")]
 To send output to {ls}, make sure you configure the Logstash output in
 <<config-{beatname_lc}-logstash>>. For all other outputs, see <<configuring-output>>.
 endif::[]
-endif::[]
+endif::only-elasticsearch[]
 ifdef::only-elasticsearch[]
 {es} is currently the only output supported by {beatname_uc}.
-endif::[]
-endif::[]
+endif::only-elasticsearch[]
+endif::has_module_steps[]
