--- a/x-pack/beatless/docs/configuring-howto.asciidoc
+++ b/x-pack/beatless/docs/configuring-howto.asciidoc
@@ -45,43 +45,43 @@ include::./config-options.asciidoc[]
 include::./general-options.asciidoc[]
 
 :allplatforms:
-include::../../libbeat/docs/queueconfig.asciidoc[]
+include::{libbeat-dir}/docs/queueconfig.asciidoc[]
 :allplatforms!:
 
-include::../../libbeat/docs/outputconfig.asciidoc[]
+include::{libbeat-dir}/docs/outputconfig.asciidoc[]
 
-include::../../libbeat/docs/shared-ssl-config.asciidoc[]
+include::{libbeat-dir}/docs/shared-ssl-config.asciidoc[]
 
 include::./filtering.asciidoc[]
 
-include::../../libbeat/docs/shared-config-ingest.asciidoc[]
+include::{libbeat-dir}/docs/shared-config-ingest.asciidoc[]
 
-include::../../libbeat/docs/shared-path-config.asciidoc[]
+include::{libbeat-dir}/docs/shared-path-config.asciidoc[]
 
-include::../../libbeat/docs/shared-kibana-config.asciidoc[]
+include::{libbeat-dir}/docs/shared-kibana-config.asciidoc[]
 
-include::../../libbeat/docs/setup-config.asciidoc[]
+include::{libbeat-dir}/docs/setup-config.asciidoc[]
 
-include::../../libbeat/docs/loggingconfig.asciidoc[]
+include::{libbeat-dir}/docs/loggingconfig.asciidoc[]
 
 :standalone:
-include::../../libbeat/docs/shared-env-vars.asciidoc[]
+include::{libbeat-dir}/docs/shared-env-vars.asciidoc[]
 :standalone!:
 
 //OPEN ISSUE: DO WE NEED AUTODISCOVER?
-//include::../../libbeat/docs/shared-autodiscover.asciidoc[]
+//include::{libbeat-dir}/docs/shared-autodiscover.asciidoc[]
 
 :standalone:
 :allplatforms:
-include::../../libbeat/docs/yaml.asciidoc[]
+include::{libbeat-dir}/docs/yaml.asciidoc[]
 :standalone!:
 :allplatforms!:
 
-include::../../libbeat/docs/regexp.asciidoc[]
+include::{libbeat-dir}/docs/regexp.asciidoc[]
 
-include::../../libbeat/docs/http-endpoint.asciidoc[]
+include::{libbeat-dir}/docs/http-endpoint.asciidoc[]
 
 // TODO: Uncomment the following include statement when the reference yaml file
 // is available in the repo. Also uncomment the link in the jump list at the top
 // of this file.
-//include::../../libbeat/docs/reference-yml.asciidoc[]
+//include::{libbeat-dir}/docs/reference-yml.asciidoc[]
