--- a/x-pack/beatless/docs/faq.asciidoc
+++ b/x-pack/beatless/docs/faq.asciidoc
@@ -17,6 +17,6 @@ ADD DESCRIPTION HERE
 
 ADD DESCRIPTION HERE
 
-include::../../libbeat/docs/faq-limit-bandwidth.asciidoc[]
+include::{libbeat-dir}/docs/faq-limit-bandwidth.asciidoc[]
 
-include::../../libbeat/docs/shared-faq.asciidoc[]
+include::{libbeat-dir}/docs/shared-faq.asciidoc[]
