--- a/x-pack/beatless/docs/getting-started.asciidoc
+++ b/x-pack/beatless/docs/getting-started.asciidoc
@@ -1,7 +1,7 @@
 [id="{beatname_lc}-getting-started"]
 == Getting Started With {beatname_uc}
 
-include::../../libbeat/docs/shared-getting-started-intro.asciidoc[]
+include::{libbeat-dir}/docs/shared-getting-started-intro.asciidoc[]
 
 * <<{beatname_lc}-installation>>
 * <<{beatname_lc}-configuration>>
@@ -12,7 +12,7 @@ include::../../libbeat/docs/shared-getting-started-intro.asciidoc[]
 * <<setup-repositories>>
 
 [id="{beatname_lc}-installation"]
-=== Step 1: Download and extract the {beatname_uc} package
+=== Step 1: Download the {beatname_uc} package
 
 The {beatname_uc} package contains the command line tools, configuration file,
 and binary code required to run Beatless in your serverless environment. 
@@ -168,30 +168,30 @@ need to desribe triggers somewhere else maybe and refer to those?
 ADD AN EXAMPLE IF NEEDED
 -------------------------------------------------------------------------------------
 
-include::../../libbeat/docs/step-configure-output.asciidoc[]
+include::{libbeat-dir}/docs/step-configure-output.asciidoc[]
 
-include::../../libbeat/docs/step-configure-kibana-endpoint.asciidoc[]
+include::{libbeat-dir}/docs/step-configure-kibana-endpoint.asciidoc[]
 
-include::../../libbeat/docs/step-configure-credentials.asciidoc[]
+include::{libbeat-dir}/docs/step-configure-credentials.asciidoc[]
 
-include::../../libbeat/docs/step-test-config.asciidoc[]
+include::{libbeat-dir}/docs/step-test-config.asciidoc[]
 
-include::../../libbeat/docs/step-look-at-config.asciidoc[]
+include::{libbeat-dir}/docs/step-look-at-config.asciidoc[]
 
 [id="{beatname_lc}-template"]
 === Step 3: Load the index template in Elasticsearch
 
 :allplatforms:
-include::../../libbeat/docs/shared-template-load.asciidoc[]
+include::{libbeat-dir}/docs/shared-template-load.asciidoc[]
 
 [[load-kibana-dashboards]]
 === Step 4: Set up the Kibana dashboards
 
 :allplatforms:
-include::../../libbeat/docs/dashboards.asciidoc[]
+include::{libbeat-dir}/docs/dashboards.asciidoc[]
 
 [id="{beatname_lc}-starting"]
-=== Step 5: Deploy functions to your serverless environment
+=== Step 5: Deploy {beatname_uc} code to your serverless environment
 
 Before deploying functions to your serverless environment, make sure you're
 logged in with the credentials required by your cloud service provider and that
@@ -243,7 +243,7 @@ To make it easier for you to explore {beatname_uc} data in Kibana, we've created
 example {beatname_uc} dashboards. You loaded the dashboards earlier when you
 ran the `setup` command.
 
-include::../../libbeat/docs/opendashboards.asciidoc[]
+include::{libbeat-dir}/docs/opendashboards.asciidoc[]
 
 You can use these dashboards as examples and
 {kibana-ref}/dashboard.html[customize] them to meet your needs.
