--- a/x-pack/beatless/docs/configuring-howto.asciidoc
+++ b/x-pack/beatless/docs/configuring-howto.asciidoc
@@ -7,7 +7,8 @@ Before modifying configuration settings, make sure you've completed the
 <<{beatname_lc}-configuration,configuration steps>> in the Getting Started.
 This section describes some common use cases for changing configuration options.
 
-To configure {beatname_uc}, you edit the configuration file. For rpm and deb,
+To configure {beatname_uc}, you edit the configuration file before deploying
+functions to your serverless environment. For rpm and deb,
 you’ll find the configuration file at +/etc/{beatname_lc}/{beatname_lc}.yml+.
 There's also a full example configuration file at
 +/etc/{beatname_lc}/{beatname_lc}.reference.yml+ that shows all non-deprecated
