--- a/x-pack/beatless/docs/getting-started.asciidoc
+++ b/x-pack/beatless/docs/getting-started.asciidoc
@@ -18,14 +18,12 @@ The {beatname_uc} package contains the command line tools, configuration file,
 and binary code required to run {beatname_uc} in your serverless environment. 
 
 To download and extract the package, use the commands that work with your system
-(<<deb, deb>> for Debian/Ubuntu, <<rpm, rpm>> for Redhat/Centos/Fedora, <<mac,
-mac>> for OS X, and <<win, win>> for Windows).
+(<<linux,linux>> for Linux, <<mac,mac>> for OS X,  and <<win, win>> for Windows).
 
-TODO: Remove sections that aren't relevant here and fix the paths to reflect the
-actual package names and download URLs.
+TODO: Confirm and update paths.
 
-[[deb]]
-*deb:*
+[[linux]]
+*linux:*
 
 ifeval::["{release-state}"=="unreleased"]
 
@@ -37,27 +35,8 @@ ifeval::["{release-state}"!="unreleased"]
 
 ["source","sh",subs="attributes"]
 ------------------------------------------------
-curl -L -O https://artifacts.elastic.co/downloads/beats/{beatname_lc}/{beatname_lc}-{version}-amd64.deb
-sudo dpkg -i {beatname_lc}-{version}-amd64.deb
-------------------------------------------------
-
-endif::[]
-
-[[rpm]]
-*rpm:*
-
-ifeval::["{release-state}"=="unreleased"]
-
-Version {version} of {beatname_uc} has not yet been released.
-
-endif::[]
-
-ifeval::["{release-state}"!="unreleased"]
-
-["source","sh",subs="attributes"]
-------------------------------------------------
-curl -L -O https://artifacts.elastic.co/downloads/beats/{beatname_lc}/{beatname_lc}-{version}-x86_64.rpm
-sudo rpm -vi {beatname_lc}-{version}-x86_64.rpm
+curl -L -O https://artifacts.elastic.co/downloads/beats/{beatname_lc}/{beatname_lc}-{version}-darwin-x86_64.tar.gz
+tar xzvf {beatname_lc}-{version}-ADDPATHHERE.tar.gz
 ------------------------------------------------
 
 endif::[]
@@ -97,23 +76,20 @@ https://www.elastic.co/downloads/beats/{beatname_lc}[downloads page].
 
 . Extract the contents of the zip file. 
 
+QUESTION: Is powershell required to run the deploy command?
+
 endif::[]
 
 [id="{beatname_lc}-configuration"]
 === Step 2: Configure {beatname_uc}
 
-To run {beatname_uc} in your serverless environment, you need to define the
-functions that will execute when specific triggers are invoked.
+Before deploying {beatname_uc} code to your serverless environment, you need to
+define details about the functions that you want to deploy, including the
+function name, type, and triggers that will invoke the function. You also need
+to specify connection details for your {es} cluster. 
 
-Before pushing {beatname_uc} code to your serverless environment, you need to
-define details the functions that you want to deploy, including the
-function name, type and triggers that will invoke the function. To do this, you
-specify settings in the +{beatname_lc}.yml+ configuration file. You 
-You also configure additional settings, such as processors to filter the data,
-and you specify connection details for your {es} cluster.
-
-The configuration file, +{beatname_lc}.yml+, is in the archive that you
-extracted earlier.
+You specify settings in the  +{beatname_lc}.yml+ configuration file. This file
+is located in the archive that you extracted earlier.
 
 TIP: See the
 {libbeat}/config-file-format.html[Config File Format] section of the
@@ -121,11 +97,6 @@ _Beats Platform Reference_ for more about the structure of the config file.
 
 The following example configures a function called `myfunction` that collects
 events from Cloudwatch Logs and forwards the events to {es}.
-
-QUESTION: For the initial release, will users need to explicitly disable any
-options that write to disk (example below was taken from a demo, so not sure)?
-
-TODO: Pare down this example.
 
 ["source","sh",subs="attributes"]
 -------------------------------------------------------------------------------------
@@ -170,26 +141,21 @@ include::{libbeat-dir}/docs/dashboards.asciidoc[]
 === Step 5: Deploy {beatname_uc} code to your serverless environment
 
 Before deploying functions to your serverless environment, make sure you're
-logged in with the credentials required by your cloud service provider and that
-the user has the privileges (?) required to ???? (deploy and run
-functions?)
+logged in with the credentials required by your cloud service provider. 
+
+QUESTION: Does the user need specific privileges to run functionbeat?
 
 The following command deploys the function named `myfunction`. See xxx for more
 information about the `deploy` command.
 
-//QUESTION: Which flags do we want to show in the example here? debug selectors?
+TODO: Add link that points to the command reference for more information.
 
-// QUESTION: What happens to the Lambda function running on Amazon if you change
-// the configuration after deploying the function? 
+QUESTION: Which flags do we want to show in the example here? debug selectors?
 
-*deb:*
+QUESTION: What happens to the Lambda function running on Amazon if you change
+the configuration after deploying the function? 
 
-["source","sh",subs="attributes"]
-----------------------------------------------------------------------
-{beatname_lc} function deploy myfunction
-----------------------------------------------------------------------
-
-*rpm:*
+*linux:*
 
 ["source","sh",subs="attributes"]
 ----------------------------------------------------------------------
@@ -207,13 +173,11 @@ information about the `deploy` command.
 
 ["source","sh",subs="attributes"]
 ----------------------------------------------------------------------
-PS C:{backslash}Program Files{backslash}{beatname_uc}> Start-Service {beatname_lc}
+PS > .\{beatname_lc}.exe function deploy myfunction
 ----------------------------------------------------------------------
 
-
-By default, Windows log files are stored in +C:\ProgramData\{beatname_lc}\Logs+.
-
-{beatname_uc} is now ready to send log files to the output.
+{beatname_uc} is now deployed in your serverless environment and ready to send
+log files to the output.
 
 [[view-kibana-dashboards]]
 === Step 6: View the sample Kibana dashboards
